# -Ehr-clinical-assistant

./: Dockerfile  README.md  READNE.md  baseline.py  check_env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  reward_model.py  schema.py  tasks.py  test_env.py  validate_spec.py
server/: app.py
